# olist_client_segmentation

./: LICENSE  Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: kmeans_client_segmentation.ipynb
